projects/examples/source/06.02.cpp
///////////////////////////////////////////////////////////////////

#include <cassert>
#include <print>

///////////////////////////////////////////////////////////////////
//!!! директива активная до конца юнита трансляции (может повлиять на код файле подключеннный ниже в коде)
#define PREFIX "test_"

///////////////////////////////////////////////////////////////////
//!!!функциональный макрос
//!!!version это набор символов!
//!!! ## это конкотенация 
//!!! \ нужен для многострочного макроса
//!!! препроцессор не увидит ошибки на этапе компиляции а только на препроцессенге
#define FUNCTION(version) void test_##version() \
{                                               \
	std::print("{}{}\n", PREFIX, #version);     \
}

///////////////////////////////////////////////////////////////////

FUNCTION(v1) // support : compiler-explorer.com

///////////////////////////////////////////////////////////////////
//!!!директива - диактивирует define 
#undef FUNCTION

///////////////////////////////////////////////////////////////////

// FUNCTION(v2) // error

///////////////////////////////////////////////////////////////////

#define SQUARE_v1(x) ( x  *  x )

#define SQUARE_v2(x) ((x) * (x))

///////////////////////////////////////////////////////////////////

#if defined(NO_TRACE)

#define TRACE(scope, string) ;

#else

#define TRACE(scope, string) std::print("{} : {}\n", scope, string)

#endif

///////////////////////////////////////////////////////////////////

int main()
{
	test_v1();

//	test_v2(); // error

//  -----------------------------------------------

    [[maybe_unused]] auto x = 1, y = 2;

//  -----------------------------------------------

//	assert(SQUARE_v1(x + x) == 3); // error

	assert(SQUARE_v2(x + x) == 4);

//  -----------------------------------------------

//	assert(SQUARE_v2(++x) == 6 && x == 3); // error

//	assert(SQUARE_v2(y++) == 6 && y == 4); // error

//  -----------------------------------------------
//!!! g++ 06.02.cpp -DNO_TRACE or #define NO_TRACE
//!!! -DNDEBUG это для отключения assert
   TRACE("main", "execution ... ");
//  -----------------------------------------------

//!!! хотим игнорировать предупреждения
#pragma GCC diagnostic ignored "-Wsign-compare"

//  -----------------------------------------------

    assert(1u < -1);

//  -----------------------------------------------

#pragma GCC diagnostic pop
}

///////////////////////////////////////////////////////////////////